[package]
name = "pong_lambda"
version = "0.1.0"
authors = ["luamfb <luamfb@riseup.net>"]
edition = "2018"
description = "The game Pong, written in lambda calculus, and a thin layer of Rust."

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
